--- a/mozilla-splash-page/index.html
+++ b/mozilla-splash-page/index.html
@@ -102,12 +102,14 @@
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
 
+          <img src="imgs/firefox_logo-only_RGB.png" alt="">
+
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
-
+        <iframe width="400" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -118,22 +120,26 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src="imgs/firefox-addons.jpg" alt="">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="imgs/mozilla-dinosaur-head.png" alt="">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="imgs/mdn.svg" alt="">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="imgs/pattern.png" alt="">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <picture>
+          <source srcset="imgs/red-panda.jpg" media="(min-width: 600px)">
+          <img src="imgs/red-panda.jpg" alt="panda">
+        </picture>
       </div>
 
     </main>
